# Analyse_donnee_vertigo

./: Données+clients+VertigGo.csv  Données+entreprise+VertiGo+nettoyées.csv  Données+entreprise+VertiGo.csv  RAPPORT.md  README.md  analyse_interpretation.ipynb  nettoyage.ipynb  pyproject.toml  vertigo_nettoyées.csv
.ipynb_checkpoints/: visualisation-checkpoint.ipynb
