[project]
name = "poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "trclarsi",email = "tr.clarsi@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.5"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "jupyterlab (>=4.4.7,<5.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
